# RPI-pico-FreeRTOS

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
include/: FreeRTOSConfig.h
pico-cpp/: CMakeLists.txt
pico-cpp/GPIO/: GPIO.hpp
src/: interrrupts.c  main.cpp
